microservices_deployment/ingress_control/ingress-lb.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: fleetmangmt.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
