microservices_deployment/ingress_control/ingress-secure-lb.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secure-routing
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: mycredentials
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: ""

spec:
  rules:
    - host: queue.fleetmangmt.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-queue
              servicePort: 8161
